# research_using_uv

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  requirements.txt.313  tmp.csv
docs/: added_Date_fundamental_registered_vs_upperLimit.csv  added_Date_fundamental_registered_vs_upperLimit_with_ratio.csv  fundamental_range_weekly.csv  fundamental_registered_vs_upperLimit.csv  impute_fundamental_record.csv  jpx_notes.txt  manage_label.txt  nan_percent.txt  regesitered_fundamental_ratio_infomation.csv  technical_fundamental_valid_weekly_date_check.csv  technical_fundamental_valid_weekly_date_check_v2.csv
docs/paper/: Reading Research Article About Financial Trading copy.md  Reading Research Article About Financial Trading.md
notebook/: backtest.ipynb  check_expansed_tech_missing.ipynb  check_funda_error.ipynb  compare_gap_of_file.ipynb  correlation_ranking.csv  create_simple_LSTM.ipynb  decide_dropping_label.ipynb  get_tickers.ipynb  match_nkcode.ipynb  remove_nouse_funda.ipynb  test_simple_LSTM.ipynb  visible_funda_csv_detail.ipynb
notebook/dev/: build_LSTM.ipynb  calc_beta.ipynb  create_complete_csv.ipynb  select_features.ipynb  watch_features.ipynb
notebook/tmp/: calc_datasize.ipynb  calc_funda.ipynb  calc_percent_learning.ipynb  calc_technical_indicater.ipynb  check_dropped_rows.ipynb  create_simple_LSTM.ipynb  decide_dropping_label.ipynb  get_fundamental_calc_component.ipynb  test_simple_LSTM.ipynb
scripts/funda_appearance_rate/: funda_appearance_rate.py  funda_columns.txt
scripts/get_from_nfq/: autorun.py  script_creater.py  temp.py
(+45 files in other folders)
