[project]
name = "research-using-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.2",
]
