[project]
name = "research-using-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pypdf2>=3.0.1",
    "pywin32>=311",
    "rapidfuzz>=3.14.1",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "ruff>=0.13.2",
]
