[project]
name = "research-using-uv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pdfplumber>=0.11.7",
    "pyautogui>=0.9.54",
    "pypdf2>=3.0.1",
    "pywin32>=311",
    "pywinauto>=0.6.9",
    "rapidfuzz>=3.14.1",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "yfinance>=0.2.66",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "ipykernel>=6.30.1",
    "ruff>=0.13.2",
]
